<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/rl_base"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical" >

<LinearLayout  android:id="@+id/buttonLayout"
    android:layout_width="match_parent" android:layout_alignParentBottom="true"
    android:layout_height="wrap_content" android:visibility="visible"
    android:paddingBottom="10dp"
    android:orientation="horizontal"
    android:weightSum="4">

    <Button
        android:id="@+id/btnEmailCancel" android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="3"
        android:background="@drawable/button_rounded_gray_shape"
        android:text="@string/delete"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnEmailSend" android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/blue_bg"
        android:text="@string/send"
        android:textSize="@dimen/common_sign_in_up_text_size" />

</LinearLayout>
<LinearLayout android:id="@+id/rl_base2"
    android:layout_width="match_parent" android:layout_above="@+id/buttonLayout"
    android:layout_height="match_parent" android:weightSum="100"
    android:orientation="vertical" >



    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/salar_title_green"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"

        android:layout_marginBottom="5dp" >
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_10"
            android:src="@drawable/left_arrow_selector"/>
         <ImageView
           android:id="@+id/imgArrowRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/margin_10"
             android:padding="@dimen/padding_10"
             android:background="@color/green" />
        <TextView
            android:id="@+id/view_title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgBack"
            android:layout_centerVertical="true"  android:ellipsize="end" android:text="@string/reply"
            android:singleLine="true" android:layout_marginRight="2dp"
            android:textColor="@color/white" android:hint="" android:textStyle="bold"
            android:textSize="24dp"  />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                >
                <!-- <ImageView
                   android:id="@+id/imgArrow"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:background="@drawable/username_icon" />-->
                <TextView
                    android:id="@+id/replyDate" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"  android:ellipsize="end" android:text="11.00 AM"
                    android:singleLine="true" android:layout_marginRight="2dp" android:maxLength="11"
                    android:textColor="@color/text_list_light_color" android:hint="@string/data" android:textStyle="normal"
                    android:textSize="@dimen/txt_size_12"  />
                <TextView
                    android:id="@+id/replyFrom" android:layout_toLeftOf="@+id/replyDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true" android:ellipsize="end"
                    android:singleLine="true" android:layout_marginRight="2dp"
                    android:textColor="@color/salar_title_green"
                    android:hint="@string/data"
                    android:textSize="@dimen/txt_size_14" android:text="@string/app_name"
                    android:textStyle="bold" />


            </RelativeLayout>
            <!-- <TextView
                 android:id="@+id/emailTitle"
                 android:layout_width="wrap_content" android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:hint="emailTitle"
                 android:textSize="16sp"-->
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/emtxtSubject" android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:singleLine="true"
                    android:textColor="@color/salar_title_gray"
                    android:text="@string/reply"
                    android:textSize="@dimen/txt_size_12"
                    />
                <EditText
                    android:id="@+id/emEdtSubject" android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_gravity="top"
                    android:layout_centerVertical="true"

                    android:singleLine="true"
                    android:textColor="@color/salar_title_gray"
                    android:background="@color/white"
                    android:textSize="@dimen/txt_size_12"
                    />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_sep2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/gray_light" />

    <EditText
        android:id="@+id/emEdtMessage" android:gravity="top" android:focusable="true" android:enabled="true"
        android:textStyle="normal" android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:scrollbars="vertical"
        android:background="@color/body_white"
        android:textColor="@color/black"
        android:textSize="14dp" />

</LinearLayout>



</RelativeLayout>